Add module-info files
JIRA: LMCROSSITXSADEPLOY-2171